--- a/debian/nvidia-smi.lintian-overrides.in
+++ b/debian/nvidia-smi.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[i386 armhf]: binary-file-built-without-LFS-support
+[armhf]: binary-file-built-without-LFS-support
 embedded-library usr/lib/#PRIVATE#/nvidia-smi: zlib
 spelling-error-in-binary
 hardening-no-bindnow
