--- a/debian/rules
+++ b/debian/rules
@@ -15,11 +15,10 @@ XORG_BOUND		?=
 LINUX_KMOD_TESTED	?=
 NVIDIA_LEGACY_CHECK	?=
 NVIDIA_SETTINGS		?= nvidia-settings$(legacy)
-ARCH_LIST		?= i386 amd64
-ARCH_DEPS_i386		?=
+ARCH_LIST		?= amd64
 BLOB_ARCH_LIST		?= $(strip $(DEB_HOST_ARCH) $(ARCH_DEPS_$(DEB_HOST_ARCH)))
 UVM_ARCH_LIST		?= $(ARCH_LIST)
-VULKAN_ARCH_LIST	?= i386 amd64
+VULKAN_ARCH_LIST	?= amd64
 
 NVIDIA_RELEASE		 = $(DEB_VERSION_UPSTREAM)
 version			 = $(NVIDIA_RELEASE)
