--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -5,5 +5,5 @@ create-orig = False
 pristine-tar = False
 compression = gz
 tarball-dir = ../tarballs-nvidia-graphics-drivers
-component = [ 'amd64', 'i386', 'armhf', ]
+component = [ 'amd64', 'armhf', ]
 debian-branch = master
