--- a/debian/nvidia-alternative.postinst.in
+++ b/debian/nvidia-alternative.postinst.in
@@ -2,7 +2,7 @@
 set -e
 
 
-TRIPLETS="/ /i386-linux-gnu/ /x86_64-linux-gnu/ /arm-linux-gnueabihf/ /powerpc64le-linux-gnu/"
+TRIPLETS="/ /x86_64-linux-gnu/ /arm-linux-gnueabihf/ /powerpc64le-linux-gnu/"
 
 add_slave()
 {
