build i386 library packages from the 32/ folder in the x86_64 .run file
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/396@7979 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-alternative.postinst.in
+++ b/debian/nvidia-alternative.postinst.in
@@ -2,7 +2,7 @@
 set -e
 
 
-TRIPLETS="/ /x86_64-linux-gnu/ /arm-linux-gnueabihf/ /powerpc64le-linux-gnu/"
+TRIPLETS="/ /i386-linux-gnu/ /x86_64-linux-gnu/ /powerpc64le-linux-gnu/"
 
 add_slave()
 {
