--- a/debian/control
+++ b/debian/control
@@ -96,20 +96,21 @@ Description: NVIDIA driver support binaries${nvidia:LegacyDesc}
 
 #Package: ${nvidia}-driver-libs
 Package: nvidia-driver-libs
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  libgl1-${nvidia}-glvnd-glx (= ${binary:Version}),
  ${nvidia}-egl-icd (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
+ ${nvidia}-driver-libs-i386 [amd64],
  libopengl0 | libopengl0-glvnd-nvidia,
  libglx-${nvidia}0 (= ${binary:Version}),
 # libgles-${nvidia}1 (= ${binary:Version}),
  libgles-${nvidia}2 (= ${binary:Version}),
- lib${nvidia}-cfg1 (= ${binary:Version}),
- nvidia-egl-wayland-icd (= ${binary:Version}),
- ${nvidia}-vulkan-icd (= ${binary:Version}) [amd64],
+ lib${nvidia}-cfg1 (= ${binary:Version}) [!i386],
+ nvidia-egl-wayland-icd (= ${binary:Version}) [!i386],
+ ${nvidia}-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
  libglvnd0-nvidia,
  libopengl0-glvnd-nvidia,
@@ -128,21 +129,36 @@ Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES libraries)${nvidia:LegacyDe
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
 
+#Package: ${nvidia}-driver-libs-i386
+Package: nvidia-driver-libs-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ ${nvidia}-driver-libs,
+ ${misc:Depends}
+Conflicts:
+ libgl1-${nvidia}-glx-i386,
+Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES 32-bit libraries)${nvidia:LegacyDescShort}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA
+ OpenGL/GLX/EGL/GLES libraries when installing ${nvidia}-driver-libs
+ on amd64 with foreign architecture i386 enabled.
+
 #Package: ${nvidia}-driver-libs-nonglvnd
 Package: nvidia-driver-libs-nonglvnd
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
  libegl1-${nvidia} (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
+ ${nvidia}-driver-libs-nonglvnd-i386 [amd64],
  libglx-${nvidia}0 (= ${binary:Version}),
  libgles-${nvidia}1 (= ${binary:Version}),
  libgles-${nvidia}2 (= ${binary:Version}),
- lib${nvidia}-cfg1 (= ${binary:Version}),
- nvidia-egl-wayland-icd (= ${binary:Version}),
- ${nvidia}-nonglvnd-vulkan-icd (= ${binary:Version}) [amd64],
+ lib${nvidia}-cfg1 (= ${binary:Version}) [!i386],
+ nvidia-egl-wayland-icd (= ${binary:Version}) [!i386],
+ ${nvidia}-nonglvnd-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
  libglvnd0-nvidia,
  libopengl0-glvnd-nvidia,
@@ -159,6 +175,20 @@ Description: NVIDIA metapackage (non-GLVND OpenGL/GLX/EGL/GLES libraries)${nvidi
  This metapackage depends on the (non-GLVND) NVIDIA binary libraries
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
+
+#Package: ${nvidia}-driver-libs-nonglvnd-i386
+Package: nvidia-driver-libs-nonglvnd-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ ${nvidia}-driver-libs-nonglvnd,
+ ${misc:Depends}
+Conflicts:
+ libgl1-${nvidia}-glx-i386,
+Description: NVIDIA metapackage (non-GLVND OpenGL/GLX/EGL/GLES 32-bit libraries)${nvidia:LegacyDescShort}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA
+ OpenGL/GLX/EGL/GLES libraries when installing ${nvidia}-driver-libs-nonglvnd
+ on amd64 with foreign architecture i386 enabled.
 
 #Package: xserver-xorg-video-${nvidia}
 Package: xserver-xorg-video-nvidia
@@ -200,7 +230,7 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
 
 Package: nvidia-legacy-check
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: foreign
 Pre-Depends:
  debconf (>= 0.5) | debconf-2.0,
@@ -216,7 +246,7 @@ Description: check for NVIDIA GPUs requiring a legacy driver
  confirm the installation of the current driver line.
 
 Package: libglvnd0-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -241,7 +271,7 @@ Description: Vendor neutral GL dispatch library -- libGLdispatch
  provided by NVIDIA.
 
 Package: libopengl0-glvnd-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -259,7 +289,7 @@ Description: Vendor neutral GL dispatch library -- libOpenGL
  by NVIDIA which dispatches to vendor implementations via GLVND.
 
 Package: libglx0-glvnd-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -279,7 +309,7 @@ Description: Vendor neutral GL dispatch library -- libGLX
 
 #Package: libglx-${nvidia}0
 Package: libglx-nvidia0
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -302,7 +332,7 @@ Description: NVIDIA binary GLX library${nvidia:LegacyDesc}
  that is accessed via GLVND.
 
 Package: libgl1-glvnd-nvidia-glx
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -324,7 +354,7 @@ Description: Vendor neutral GL dispatch library -- libGL
 
 #Package: libgl1-${nvidia}-glvnd-glx
 Package: libgl1-nvidia-glvnd-glx
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  libgl1 (>= 0.2.999) | libgl1-glvnd-nvidia-glx,
@@ -346,7 +376,7 @@ Description: NVIDIA binary OpenGL/GLX library (GLVND variant)${nvidia:LegacyDesc
 
 #Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  nvidia-installer-cleanup,
@@ -355,6 +385,7 @@ Pre-Depends:
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  lib${nvidia}-glcore (= ${binary:Version}),
+ nvidia-installer-cleanup (>= 20130816) [i386],
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
@@ -379,7 +410,7 @@ Description: NVIDIA binary OpenGL/GLX library (non-GLVND variant)${nvidia:Legacy
 
 #Package: lib${nvidia}-glcore
 Package: libnvidia-glcore
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -403,7 +434,7 @@ Description: NVIDIA binary OpenGL/GLX core libraries${nvidia:LegacyDesc}
  implementation of OpenGL and GLX.
 
 Package: libegl1-glvnd-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -425,7 +456,7 @@ Description: Vendor neutral GL dispatch library -- libEGL
 
 #Package: libegl1-${nvidia}
 Package: libegl1-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -442,7 +473,7 @@ Description: NVIDIA binary EGL library (non-GLVND variant)${nvidia:LegacyDesc}
 
 #Package: libegl-${nvidia}0
 Package: libegl-nvidia0
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -462,7 +493,7 @@ Description: NVIDIA binary EGL library${nvidia:LegacyDesc}
  by NVIDIA that is accessed via GLVND.
 
 Package: libgles1-glvnd-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -495,7 +526,7 @@ Description: NVIDIA binary OpenGL|ES 1.x GLVND stub library
 #Package: libgles1-${nvidia}
 Package: libgles1-nvidia
 Section: non-free/oldlibs
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -515,7 +546,7 @@ Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:LegacyDe
 
 #Package: libgles-${nvidia}1
 Package: libgles-nvidia1
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -540,7 +571,7 @@ Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
  by NVIDIA that is accessed via GLVND.
 
 Package: libgles2-glvnd-nvidia
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -574,7 +605,7 @@ Description: NVIDIA binary OpenGL|ES 2.x GLVND stub library
 #Package: libgles2-${nvidia}
 Package: libgles2-nvidia
 Section: non-free/oldlibs
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -595,7 +626,7 @@ Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:LegacyDe
 
 #Package: libgles-${nvidia}2
 Package: libgles-nvidia2
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -622,7 +653,7 @@ Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-eglcore
 Package: libnvidia-eglcore
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -660,7 +691,7 @@ Description: NVIDIA binary EGL driver - common files
 
 #Package: ${nvidia}-egl-icd
 Package: nvidia-egl-icd
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-egl-common,
@@ -748,7 +779,7 @@ Description: NVIDIA Vulkan driver - common files
 
 #Package: ${nvidia}-vulkan-icd
 Package: nvidia-vulkan-icd
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-vulkan-common,
@@ -788,7 +819,7 @@ Description: NVIDIA Vulkan driver - common files (non-GLVND variant)
 
 #Package: ${nvidia}-nonglvnd-vulkan-icd
 Package: nvidia-nonglvnd-vulkan-icd
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-nonglvnd-vulkan-common,
@@ -851,7 +882,7 @@ Description: NVIDIA binary OpenGL/GLX configuration library${nvidia:LegacyDesc}
 
 #Package: ${nvidia}-alternative
 Package: nvidia-alternative
-Architecture: amd64 ppc64el
+Architecture: i386 amd64 ppc64el
 Multi-Arch: foreign
 Pre-Depends:
  dpkg (>= 1.17.21),
@@ -986,7 +1017,7 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
 #Package: ${nvidia}-vdpau-driver
 Package: nvidia-vdpau-driver
 Section: non-free/video
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  nvidia-installer-cleanup,
@@ -1055,7 +1086,7 @@ Description: NVIDIA CUDA Multi Process Service (MPS)
 
 #Package: ${libcuda1}
 Package: libcuda1
-Architecture: amd64 ppc64el
+Architecture: i386 amd64 ppc64el
 Multi-Arch: same
 Pre-Depends:
  ${nvidia:legacy-check},
@@ -1069,20 +1100,30 @@ Recommends:
  ${nvidia:kmod:binary},
  ${nvidia}-smi,
  nvidia-persistenced,
+ ${libcuda1}-i386 [amd64],
 Suggests:
  nvidia-cuda-mps,
  ${nvidia:kmod:source},
 Provides:
  libcuda1-any,
  libcuda-5.0-1,
+ libcuda-5.0-1-i386 [i386],
  libcuda-5.5-1,
+ libcuda-5.5-1-i386 [i386],
  libcuda-6.0-1,
+ libcuda-6.0-1-i386 [i386],
  libcuda-6.5-1,
+ libcuda-6.5-1-i386 [i386],
  libcuda-7.0-1,
+ libcuda-7.0-1-i386 [i386],
  libcuda-7.5-1,
+ libcuda-7.5-1-i386 [i386],
  libcuda-8.0-1,
+ libcuda-8.0-1-i386 [i386],
  libcuda-9.0-1,
+ libcuda-9.0-1-i386 [i386],
  libcuda-9.1-1,
+ libcuda-9.1-1-i386 [i386],
 Homepage: https://www.nvidia.com/CUDA
 Description: NVIDIA CUDA Driver Library${nvidia:LegacyDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -1097,9 +1138,21 @@ Description: NVIDIA CUDA Driver Library${nvidia:LegacyDesc}
  .
  ${nvidia:kmod:Description}
 
+#Package: ${libcuda1}-i386
+Package: libcuda1-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ ${libcuda1},
+ ${misc:Depends}
+Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
+ library when installing ${libcuda1} on amd64 with foreign
+ architecture i386 enabled.
+
 #Package: lib${nvidia}-compiler
 Package: libnvidia-compiler
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1118,7 +1171,7 @@ Description: NVIDIA runtime compiler library${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-fatbinaryloader
 Package: libnvidia-fatbinaryloader
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1134,7 +1187,7 @@ Description: NVIDIA FAT binary loader${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-ptxjitcompiler1
 Package: libnvidia-ptxjitcompiler1
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1149,7 +1202,7 @@ Description: NVIDIA PTX JIT Compiler${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-nvcuvid1
 Package: libnvcuvid1
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1168,7 +1221,7 @@ Description: NVIDIA CUDA Video Decoder runtime library${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-encode1
 Package: libnvidia-encode1
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1183,7 +1236,7 @@ Description: NVENC Video Encoding runtime library${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-ifr1
 Package: libnvidia-ifr1
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1200,7 +1253,7 @@ Description: NVIDIA OpenGL-based Inband Frame Readback runtime library${nvidia:L
 
 #Package: lib${nvidia}-fbc1
 Package: libnvidia-fbc1
-Architecture: amd64
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1217,7 +1270,7 @@ Description: NVIDIA OpenGL-based Framebuffer Capture runtime library${nvidia:Leg
 
 #Package: lib${nvidia}-ml1
 Package: libnvidia-ml1
-Architecture: amd64 ppc64el
+Architecture: i386 amd64 ppc64el
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1250,7 +1303,7 @@ Description: NVIDIA OpenCL driver - common files
 
 #Package: ${nvidia}-opencl-icd
 Package: nvidia-opencl-icd
-Architecture: amd64 ppc64el
+Architecture: i386 amd64 ppc64el
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -1274,7 +1327,7 @@ Description: NVIDIA OpenCL installable client driver (ICD)${nvidia:LegacyDesc}
  which supports NVIDIA GPUs. This ICD supports OpenCL 1.x only.
 
 Package: nvidia-libopencl1
-Architecture: amd64 ppc64el
+Architecture: i386 amd64 ppc64el
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
