--- a/debian/libnvidia-glvkspirv.lintian-overrides.in
+++ b/debian/libnvidia-glvkspirv.lintian-overrides.in
@@ -1,4 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
+[i386]: shlib-with-non-pic-code
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
