--- a/debian/rules
+++ b/debian/rules
@@ -78,9 +78,11 @@ AUTOGEN		+= debian/module/debian/changelog
 AUTOGEN		+= $(patsubst %.in,%,$(RENAMED_CONTROL))
 AUTOGEN		+= debian/bug-control
 AUTOGEN		+= debian/substvars
+ifeq (,$(filter $(DEB_HOST_ARCH),i386))
 AUTOGEN		+= debian/nv-readme.ids
 AUTOGEN		+= nvidia-amd64.ids
 AUTOGEN		+= $(if $(has_vulkan),glvnd/nvidia_icd.json nonglvnd/nvidia_icd.json)
+endif
 AUTOKEEP	 = debian/watch
 AUTOCLEAN	 = $(filter-out $(AUTOKEEP),$(AUTOGEN))
 
@@ -101,7 +103,10 @@ upstream_changelog	 = NVIDIA-Linux-amd64/NVIDIA_Changelog
 
 .PHONY: autogen prepare patch
 autogen: $(AUTOGEN)
-prepare: autogen unpack-stamp nvidia.ids compare-copyright-license
+prepare: autogen unpack-stamp
+ifeq (,$(filter $(DEB_HOST_ARCH),i386))
+prepare: nvidia.ids compare-copyright-license
+endif
 patch: prepare
 
 NVIDIA-Linux-%:
@@ -109,12 +114,17 @@ NVIDIA-Linux-%:
 	ln -s ${NVIDIA_DIRNAME_$*} $@
 	gunzip $@/*.1.gz
 
+NVIDIA-Linux-i386: NVIDIA-Linux-amd64
+	ln -s $</32 $@
+
 # Unpack all architectures, we may need files from all of them.
 unpack-stamp: $(patsubst %,NVIDIA-Linux-%,$(ARCH_LIST))
 	$(if $(filter $(DEB_HOST_ARCH),$(ARCH_LIST)),,$(error Architecture $(DEB_HOST_ARCH) unsupported.))
 	dh_testdir
 	ln -s NVIDIA-Linux-$(DEB_HOST_ARCH) NVIDIA-Linux
+ifeq (,$(filter $(DEB_HOST_ARCH),i386))
 	QUILT_PATCHES=debian/patches QUILT_SERIES=series-postunpack quilt --quiltrc /dev/null push -a || test $$? = 2
+endif
 	ls -al
 	touch $@
 
@@ -185,7 +195,10 @@ override_dh_auto_configure: prepare
 #  - module-assistant and make-kpkg
 #  - dkms
 .PHONY: install-into-tmp build-kernel-source-tree build-kernel-dkms-tree kernel-source-tree
-override_dh_auto_install: install-into-tmp build-kernel-source-tree build-kernel-dkms-tree
+override_dh_auto_install: install-into-tmp
+ifeq (,$(filter $(DEB_HOST_ARCH),i386))
+override_dh_auto_install: build-kernel-source-tree build-kernel-dkms-tree
+endif
 
 install-into-tmp:
 	# "Install" into debian/tmp.
@@ -193,7 +206,9 @@ install-into-tmp:
 	rm -rf debian/tmp/32
 	rm -rf debian/tmp/libglvnd_install_checker
 	rm -f debian/tmp/NVIDIA_Changelog
+ifeq (,$(filter $(DEB_HOST_ARCH),i386))
 	gzip -9fn debian/tmp/nvidia-smi.1
+endif
 
 build-kernel-source-tree: install-into-tmp
 	# Build the nvidia-kernel-source tree.
