--- a/debian/rules
+++ b/debian/rules
@@ -18,8 +18,8 @@ NVIDIA_SETTINGS		?= nvidia-settings$(legacy)
 ARCH_LIST		?= amd64
 ARCH_DEPS_i386		?=
 BLOB_ARCH_LIST		?= $(strip $(DEB_HOST_ARCH) $(ARCH_DEPS_$(DEB_HOST_ARCH)))
-NO_UVM_ARCH_LIST	?= i386 armhf
-NO_VULKAN_ARCH_LIST	?= armhf ppc64el
+NO_UVM_ARCH_LIST	?=
+NO_VULKAN_ARCH_LIST	?=
 
 NVIDIA_RELEASE		 = $(DEB_VERSION_UPSTREAM)
 version			 = $(NVIDIA_RELEASE)
